--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     Case Problem 1
     
     Monroe Public Library Government Links
-    Author: 
-    Date:   
+    Author: Gabriel Hernandez
+    Date: 4/18/19   
 
-    Filename: mpl_links.html
+    Filename: index.html
    -->
    
    <title>Monroe Public Library List of Government Sites</title>
@@ -190,5 +190,6 @@
    <footer>
       <p>Monroe Public Library &copy; 2018 All Rights Reserved</p>
    </footer>
+   <script src="mpl_links.js"></script>
 </body>
 </html>
